logo not displaying debugged

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div class="logo">
 								<a href="index.html">
 									<!-- Ritu<span>Travels</span> -->
-									<img src="/assets/logo/logo.png" alt="Ritu Travels Logo">
+									<img src="assets/logo/logo.png" alt="Ritu Travels Logo">
 								</a>
 							</div><!-- /.logo-->
 						</div><!-- /.col-->
@@ -464,7 +464,7 @@
 							<div class="single-footer-item">
 								<div class="footer-logo">
 									<a href="index.html">
-										<img src="/assets/logo/logodark.png" alt="Ritu Travels Logo">
+										<img src="assets/logo/logodark.png" alt="Ritu Travels Logo">
 									</a>
 								</div>
 							</div><!--/.single-footer-item-->
