--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<div class="single-about-us">
 								<div class="about-us-txt">
 									<h2>
-										Explore the Beauty of the World 
+										Mumbai Darshan Tour - Daily 
 
 									</h2>
 									<div class="about-btn">
