icon below hero

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							<div class="service-content">
 								<h2>
 									<a href="#">
-									amazing tour packages
+									amazing package tours
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
@@ -174,12 +174,12 @@
 					<div class="col-md-4 col-sm-4">
 						<div class="single-service-box">
 							<div class="service-img">
-								<img src="assets/images/service/b.png" alt="service-icon" />
+								<img src="assets/images/service/car.png" alt="service-icon" />
 							</div><!--/.service-img-->
 							<div class="service-content">
 								<h2>
 									<a href="#">
-										book top class hotel
+										Easy Car Rentals
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
@@ -190,13 +190,13 @@
 					<div class="col-md-4 col-sm-4">
 						<div class="single-service-box">
 							<div class="statistics-img">
-								<img src="assets/images/service/c.png" alt="service-icon" />
+								<img src="assets/images/service/train.png" alt="service-icon" />
 							</div><!--/.service-img-->
 							<div class="service-content">
 
 								<h2>
 									<a href="#">
-										online flight booking
+										Fast Train Booking
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
