mumbai darshan add phone number

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 										Mumbai Darshan Tour - Daily 
 
 									</h2>
+									<h3 style="color:#fff">Call +91 90822 59527</h3>
 									<div class="about-btn">
 										<button onclick="window.location.href='tel:+919082259527';" class="about-view">
 											call now
@@ -216,7 +217,7 @@
 				<div class="gallery-details">
 					<div class="gallary-header text-center">
 						<h2>
-							Packages & Destinations
+							Package Tours
 						</h2>
 					</div><!--/.gallery-header-->
 					<div class="gallery-box">
