--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 								<h2>
 									<a href="#">
-										Fast Train Booking
+										Train Ticket Booking
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
@@ -378,6 +378,18 @@
 											</span>
 											<i class="fa fa-angle-right"></i>  Registration
 										 </p>
+										 <p>
+											<span>
+												<i class="fa fa-angle-right"></i> Vehicle NOC
+											</span>
+											<i class="fa fa-angle-right"></i>Duplicate RC
+										 </p>
+										 <p>
+											<span>
+												<i class="fa fa-angle-right"></i> HP Removal
+											</span>
+											<i class="fa fa-angle-right"></i> Ownership Change
+										 </p>
 									</div><!--/.packages-para-->
 								</div><!--/.single-package-item-txt-->
 							</div><!--/.single-package-item-->
@@ -387,8 +399,14 @@
 							<div class="single-package-item">
 								<img src="assets/images/packages/car.jpg" alt="package-place">
 								<div class="single-package-item-txt text-center">
-									<h3>Car on Rent (AC/Non-AC)</h3>
+									<h3>Car on Rent</h3>
 									<div class="packages-para">
+										<p>
+											<span>
+												<i class="fa fa-angle-right"></i> AC
+											</span>
+											<i class="fa fa-angle-right"></i> Non-AC
+										 </p>
 										<p>
 											<span>
 												<i class="fa fa-angle-right"></i> Tata
@@ -399,8 +417,15 @@
 											<span>
 												<i class="fa fa-angle-right"></i>  Maruti
 											</span>
-											<i class="fa fa-angle-right"></i>  Ford & more...
+											<i class="fa fa-angle-right"></i>  Ford
 										 </p>
+										 <p>
+											<span>
+												<i class="fa fa-angle-right"></i> Honda
+											</span>
+											<i class="fa fa-angle-right"></i>Hyundai & more...
+										 </p>
+										
 									</div><!--/.packages-para-->
 								</div><!--/.single-package-item-txt-->
 							</div><!--/.single-package-item-->
@@ -414,6 +439,12 @@
 									<div class="packages-para">
 										<p>
 											<span>
+												<i class="fa fa-angle-right"></i> AC
+											</span>
+											<i class="fa fa-angle-right"></i> Non-AC
+										 </p>
+										<p>
+											<span>
 												<i class="fa fa-angle-right"></i> 2 x 1 seating
 											</span>
 											<i class="fa fa-angle-right"></i>  2 x 2 seating
@@ -424,6 +455,13 @@
 											</span>
 											<i class="fa fa-angle-right"></i>  49/54/58 seater
 										 </p>
+										 <p>
+											<span>
+												<i class="fa fa-angle-right"></i> Sleeper
+											</span>
+											<i class="fa fa-angle-right"></i>Seating
+										 </p>
+										 
 									</div><!--/.packages-para-->
 								</div><!--/.single-package-item-txt-->
 							</div><!--/.single-package-item-->
@@ -442,7 +480,7 @@
 							<div class="single-package-item">
 								<img src="assets/images/packages/train.jpg" alt="package-place">
 								<div class="single-package-item-txt text-center">
-									<h3>Bus & Train Booking</h3>
+									<h3>Bus & Train Ticket Booking</h3>
 								</div><!--/.single-package-item-txt-->
 							</div><!--/.single-package-item-->
 						</div><!--/.col-->
@@ -451,7 +489,7 @@
 							<div class="single-package-item">
 								<img src="assets/images/packages/holiday.jpg" alt="package-place">
 								<div class="single-package-item-txt text-center">
-									<h3>Custom Tour Packages</h3>
+									<h3>Custom Package Tours</h3>
 								</div><!--/.single-package-item-txt-->
 							</div><!--/.single-package-item-->
 						</div><!--/.col-->
