--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 										</div>
 																				
 									<h3 style="color:#fff;margin-top: 15px;">Call +91 90822 59527</h3>
+									<h3 style="color:#fff;margin-top: 15px; text-transform: lowercase;">or email bookings@ritutravels.com</h3>
 									<div class="about-btn">
 										<button onclick="window.location.href='tel:+919082259527';" class="about-view">
 											call now
@@ -593,6 +594,7 @@
 									<p><a href="tel:+91 90822 59527">+91 90822 59527</a> / <a href="tel:+91 99204 08187">+91 99204 08187</a></p>
 									<p><a href="tel:+91 87798 84598">+91 87798 84598</a></p>
 									<p>C/11 Jay Jay Shree Ram CHS, Ram Nagar, Dombivali(E)</p>
+									<p style="text-transform: lowercase;">Email: bookings@ritutravels.com</p>
 								</div><!--/.single-footer-txt-->
 							</div><!--/.single-footer-item-->
 						</div><!--/.col-->
