--- a/index.html
+++ b/index.html
@@ -614,9 +614,8 @@
 					<i class="fa fa-angle-double-up return-to-top" id="scroll-top" data-toggle="tooltip" data-placement="top" title="" data-original-title="Back to Top" aria-hidden="true"></i>
 				</div><!--/.scroll-Top-->
 				<div class="row">
-					<div class="col-sm-4"><p>&copy; Site Developed by <a href="http://www.addnectar.com">Addnectar Solutions Pvt. Ltd.</a></p></div>
-					<div class="col-sm-4 text-center"><p>&copy; 2020 Ritu Tours & Travels. All Rights Reserved.</p></div>
-					<div class="col-sm-4 text-right"><p>Theme by <a href="https://www.themesine.com">ThemeSINE</a></p></div>
+					<div class="col-sm-6 text-left"><p>&copy; 2020 Ritu Tours & Travels. All Rights Reserved.</p></div>
+					<div class="col-sm-6 text-right"><p>Theme by <a href="https://www.themesine.com">ThemeSINE</a></p></div>
 				</div>
 			</div><!-- /.container-->
 
