--- a/index.html
+++ b/index.html
@@ -166,18 +166,18 @@
         <!--service start-->
 		<section id="service" class="service">
 			<div class="container">
-
+				<div class="service-counter text-center" style="margin-bottom: 30px;"><h2>Lockdown & COVID-19 Assistance</h2></div>
 				<div class="service-counter text-center">
 
 					<div class="col-md-4 col-sm-4">
 						<div class="single-service-box">
 							<div class="service-img">
-								<img src="assets/images/service/a.png" alt="service-icon" />
+								<img src="assets/images/service/epass.png" alt="service-icon" />
 							</div><!--/.service-img-->
 							<div class="service-content">
 								<h2>
 									<a href="#">
-									amazing package tours
+									e-Pass Assistance
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
@@ -193,7 +193,7 @@
 							<div class="service-content">
 								<h2>
 									<a href="#">
-										Easy Car Rentals
+										Sanitised Car Rentals
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
@@ -210,7 +210,7 @@
 
 								<h2>
 									<a href="#">
-										Train Ticket Booking
+										Confirmed Train Tickets
 									</a>
 								</h2>
 								<!-- <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p> -->
